<resources>

    <string name="app_name">SpotifyDownloader</string>
    <!--Shared -->
    <string name="storageIcon">Storage Icon</string>
    <string name="shareIcon">Share Icon</string>
    <string name="arrowIcon">Arrow Icon</string>
    <string name="progress_bar">Progress bar</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="permissions">Choose Folder</string>
    <string name="download">Download</string>
    <string name="StoragePermission">Select a folder to save the downloaded songs</string>
    <string name="StoragePermissionForSingleSong">Select a folder to save the downloaded songs</string>


    <!--Playlist Fragment -->
    <string name="playlistLink">Playlist Link</string>
    <string name="insertPlaylistLink">Insert a Spotify playlist share link</string>
    <string name="downloadPlaylist">Press Download to download the whole playlist</string>


    <!--Playlist Fragment -->
    <string name="albumLink">Album Link</string>
    <string name="insertAlbumLink">Insert a Spotify album share link</string>
    <string name="downloadAlbum">Press Download to download the whole album</string>


    <!--Song Fragment -->
    <string name="songName">Song name</string>
    <string name="artistName">Artist name (Not required)</string>
    <string name="insertSongLink">Insert the song Name and artist Name</string>
    <string name="downloadSong">Press Download to download the song</string>

    <!--Track Fragment -->
    <string name="trackLink">Track Link</string>
    <string name="insertTrackLink">Insert a Spotify track share link</string>
    <string name="downloadTrack">Press Download to download the track</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_download_library">Update Download Library</string>
    <string name="select_song_to_be_downloaded">Select song to be downloaded</string>


</resources>