<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".Fragments.trackFragment">

    <TextView
        android:id="@+id/permissionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"

        android:layout_marginTop="20dp"
        android:text="@string/StoragePermissionForSingleSong"
        app:layout_constraintLeft_toRightOf="@id/imageView5"
        app:layout_constraintTop_toTopOf="parent"

        />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/storageIcon"
        app:layout_constraintBottom_toBottomOf="@id/permissionText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/permissionText"


        app:srcCompat="@android:drawable/ic_menu_save" />

    <Button
        android:id="@+id/perms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/permissions"
        app:icon="@drawable/ic_baseline_storage_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/permissionText"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="96dp" />

    <ImageView
        android:id="@+id/shareIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:contentDescription="@string/shareIcon"

        app:layout_constraintBottom_toBottomOf="@id/playlistLinkShareLink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/playlistLinkShareLink"
        app:srcCompat="@android:drawable/ic_menu_share" />

    <TextView
        android:id="@+id/playlistLinkShareLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/insertTrackLink"
        app:layout_constraintLeft_toRightOf="@+id/shareIcon"


        app:layout_constraintTop_toBottomOf="@id/perms"

        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PlaylistLinkTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/trackLink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistLinkShareLink"


        app:startIconDrawable="@drawable/ic_baseline_insert_link_24">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/PlaylistLinkEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/pressDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/downloadTrack"
        app:layout_constraintLeft_toRightOf="@id/startIcon"
        app:layout_constraintTop_toBottomOf="@id/PlaylistLinkTextBox"

        />

    <ImageView
        android:id="@+id/startIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/arrowIcon"
        android:rotationY="180"
        app:layout_constraintBottom_toBottomOf="@id/pressDownload"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/pressDownload"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <Button
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/download"
        app:icon="@drawable/ic_baseline_download_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"


        app:layout_constraintTop_toBottomOf="@id/pressDownload"

        />


</androidx.constraintlayout.widget.ConstraintLayout>