<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".playListFragment">

    <TextView
        android:id="@+id/permissionTextAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"

        android:layout_marginTop="20dp"
        android:text="@string/StoragePermission"
        app:layout_constraintLeft_toRightOf="@id/imageView5AB"
        app:layout_constraintTop_toTopOf="parent"

        />


    <ImageView
        android:id="@+id/imageView5AB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/storageIcon"
        app:layout_constraintBottom_toBottomOf="@id/permissionTextAB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/permissionTextAB"


        app:srcCompat="@android:drawable/ic_menu_save" />

    <Button
        android:id="@+id/permsAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/permissions"
        app:icon="@drawable/ic_baseline_storage_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/permissionTextAB"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="96dp" />

    <ImageView
        android:id="@+id/shareIconAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:contentDescription="@string/shareIcon"

        app:layout_constraintBottom_toBottomOf="@id/playlistLinkShareLinkAB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/playlistLinkShareLinkAB"
        app:srcCompat="@android:drawable/ic_menu_share" />

    <TextView
        android:id="@+id/playlistLinkShareLinkAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/insertAlbumLink"
        app:layout_constraintLeft_toRightOf="@+id/shareIconAB"


        app:layout_constraintTop_toBottomOf="@id/permsAB"

        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PlaylistLinkTextBoxAB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/albumLink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistLinkShareLinkAB"


        app:startIconDrawable="@drawable/ic_baseline_insert_link_24">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/PlaylistLinkEditTextAB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/pressDownloadAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/downloadAlbum"
        app:layout_constraintLeft_toRightOf="@id/startIconAB"
        app:layout_constraintTop_toBottomOf="@id/PlaylistLinkTextBoxAB"

        />

    <ImageView
        android:id="@+id/startIconAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/arrowIcon"
        android:rotationY="180"
        app:layout_constraintBottom_toBottomOf="@id/pressDownloadAB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/pressDownloadAB"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <Button
        android:id="@+id/downloadAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/download"
        app:icon="@drawable/ic_baseline_download_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"


        app:layout_constraintTop_toBottomOf="@id/pressDownloadAB"

        />

    <TextView
        android:id="@+id/ProgressBarTextAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/progress_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/downloadAB"

        />

    <ProgressBar
        android:id="@+id/progressBarAB"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ProgressBarTextAB" />
    <TextView
        android:id="@+id/concurrentDownloadsAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/progressBarAB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="Concurent Downloads"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radioGroupAB"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="473dp"
        app:layout_constraintTop_toBottomOf="@id/concurrentDownloadsAB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp">


        <RadioButton
            android:id="@+id/selection1AB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/selection2AB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2" />
        <RadioButton
            android:id="@+id/selection3AB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3" />
        <RadioButton
            android:id="@+id/selection4AB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>